@@ -49,17 +49,17 @@ public class InternalEjbcaResourcesTest {
 	@Test
     public void testGetLocalizedMessageStringObject() {
         InternalEjbcaResources intres = new InternalEjbcaResources(TEST_RESOURCE_PATH);
-        String res = intres.getLocalizedMessage("test.testparams", new Long(1), new Integer(3), "hi", new Boolean(true), "bye");
+        String res = intres.getLocalizedMessage("test.testparams", new Long(1), new Integer(3), "hi", Boolean.valueOf(true), "bye");
         assertEquals("Test 1 3 hi true bye message 1", res);
-        assertEquals("Test 1 3 hi true bye message 1", intres.getLocalizedMessageCs("test.testparams", new Long(1), new Integer(3), "hi", new Boolean(true), "bye").toString());
+        assertEquals("Test 1 3 hi true bye message 1", intres.getLocalizedMessageCs("test.testparams", Long.valueOf(1), Integer.valueOf(3), "hi", Boolean.valueOf(true), "bye").toString());
     }
 
 	@Test
     public void testGetLocalizedMessageStringObjectWithNull() {
         InternalEjbcaResources intres = new InternalEjbcaResources(TEST_RESOURCE_PATH);
-        String res = intres.getLocalizedMessage("test.testparams", null, new Integer(3), null, new Boolean(true), "bye");
+        String res = intres.getLocalizedMessage("test.testparams", null, Integer.valueOf(3), null, Boolean.valueOf(true), "bye");
         assertEquals("Test  3  true bye message ", res);
-        assertEquals("Test  3  true bye message ", intres.getLocalizedMessageCs("test.testparams", null, new Integer(3), null, new Boolean(true), "bye").toString());
+        assertEquals("Test  3  true bye message ", intres.getLocalizedMessageCs("test.testparams", null, Integer.valueOf(3), null, Boolean.valueOf(true), "bye").toString());
 
         res = intres.getLocalizedMessage("test.testparams");
         assertEquals("Test      message ", res);
@@ -80,9 +80,9 @@ public class InternalEjbcaResourcesTest {
 	@Test
     public void testCeSecoreMessage() {
         InternalEjbcaResources intres = new InternalEjbcaResources(TEST_RESOURCE_PATH);
-        String res = intres.getLocalizedMessage("raadmin.testparams", new Long(1), Integer.valueOf(3), "hi", new Boolean(true), "bye");
+        String res = intres.getLocalizedMessage("raadmin.testparams", new Long(1), Integer.valueOf(3), "hi", Boolean.valueOf(true), "bye");
         assertEquals("Test 1 3 hi true bye message 1", res);    	
-        assertEquals("Test 1 3 hi true bye message 1", intres.getLocalizedMessageCs("raadmin.testparams", new Long(1), Integer.valueOf(3), "hi", new Boolean(true), "bye").toString());
+        assertEquals("Test 1 3 hi true bye message 1", intres.getLocalizedMessageCs("raadmin.testparams", Long.valueOf(1), Integer.valueOf(3), "hi", Boolean.valueOf(true), "bye").toString());
     }
 
 }
